# agentic-project-manager

./: .gitignore  README.md  demo_script.md  planning.md
backend/: pyproject.toml
backend/app/: config.py  db.py  main.py
backend/app/agents/: agent.py
backend/app/models/: models.py
backend/app/routers/: agents.py  comments.py  health.py  notifications.py  projects.py  reports.py  tasks.py  users.py
backend/app/schemas/: schemas.py
backend/app/services/: routing.py  scheduler.py  telegram.py
backend/slide/: presentation.pptx
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
slide/: create_slides.py  presentation.pptx  presentation_updated.pptx
